--- a/source/theme-browser.scss
+++ b/source/theme-browser.scss
@@ -1,4 +1,4 @@
-.modal.mod-sidebar-layout {
+body:not(.is-mobile) .modal.mod-sidebar-layout {
 	.community-modal-sidebar {
 		
 		.community-item {
